--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/_main/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_main/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/_main/Blueprints/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
