--- a/ZangaGameJam.uproject
+++ b/ZangaGameJam.uproject
@@ -16,5 +16,8 @@
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/813e339b92ad4cf587a4cef56bec7020"
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
